# dkod-swarm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
bench/: HEAD_TO_HEAD.md  MANUAL_E2E.md  README.md
bench/sandboxes/auth/: Cargo.toml
bench/sandboxes/auth/src/: lib.rs  login.rs  logout.rs  passkey.rs  session.rs
bench/sandboxes/parsers/: Cargo.toml
bench/sandboxes/parsers/src/: lib.rs
crates/dkod-cli/: Cargo.toml
crates/dkod-cli/src/: cli.rs  main.rs
crates/dkod-cli/src/cmd/: abort.rs  init.rs  mcp.rs  mod.rs  status.rs
crates/dkod-cli/tests/: abort_cmd.rs  cli_parse.rs  e2e_subprocess.rs  init_cmd.rs  plugin_layout.rs  status_cmd.rs
crates/dkod-mcp/: Cargo.toml
crates/dkod-mcp/examples/: probe_rmcp.rs
crates/dkod-mcp/src/: ctx.rs  error.rs  gh.rs  lib.rs  main.rs  recovery.rs  schema.rs  time.rs
crates/dkod-mcp/src/tools/: abort.rs  commit.rs  execute_begin.rs  execute_complete.rs  mod.rs  path.rs  plan.rs  pr.rs  status.rs  write_symbol.rs
crates/dkod-mcp/tests/: bench_parallel_vs_serial.rs  bench_sandbox_e2e.rs  commit_tool.rs  e2e_smoke.rs  error_smoke.rs  execute_begin_tool.rs  execute_complete_tool.rs  gh_shim.rs  plan_schema.rs  plan_tool_e2e.rs  plan_tool_unit.rs  pr_tool.rs  recovery.rs  server_ctor.rs  status_tool.rs  write_symbol_e2e.rs  write_symbol_lock.rs  write_symbol_tool.rs
crates/dkod-mcp/tests/common/: mod.rs
crates/dkod-mcp/tests/fixtures/tiny_rust/src/: lib.rs
crates/dkod-orchestrator/: Cargo.toml
crates/dkod-orchestrator/examples/: probe_engine_api.rs
crates/dkod-orchestrator/src/: callgraph.rs  commit.rs  error.rs  lib.rs  partition.rs  replace.rs  symbols.rs
crates/dkod-orchestrator/tests/: callgraph_build.rs  commit_per_group.rs  extract_symbols.rs  milestone1_e2e.rs  partition.rs  partition_golden.rs  replace_outer_prefix.rs  replace_symbol.rs
crates/dkod-orchestrator/tests/fixtures/basic/src/: lib.rs
crates/dkod-orchestrator/tests/fixtures/big_struct/src/: lib.rs
crates/dkod-orchestrator/tests/fixtures/golden/: basic_all_four.json  trait_coupling_full.json
crates/dkod-orchestrator/tests/fixtures/trait_coupling/src/: lib.rs
crates/dkod-worktree/: Cargo.toml
crates/dkod-worktree/src/: branch.rs  config.rs  error.rs  group.rs  init.rs  io_util.rs  lib.rs  paths.rs  session.rs
crates/dkod-worktree/tests/: branch_lifecycle.rs  config_roundtrip.rs  group_writes_jsonl.rs  init_scaffold.rs  paths.rs  session_roundtrip.rs
docs/: design.md
docs/plans/: 2026-04-24-milestone-1-plan.md  2026-04-24-milestone-2-plan.md  2026-04-25-milestone-3-plan.md  2026-04-25-milestone-4-plan.md  2026-04-28-milestone-5-plan.md
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: parallel-executor.md
plugin/commands/: execute.md  plan.md  pr.md
plugin/skills/dkod-swarm/: SKILL.md
