[package]
name = "dkod-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "User-facing dkod-swarm CLI: init, status, abort, and stdio MCP launcher"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dkod"
path = "src/main.rs"

[dependencies]
dkod-worktree = { path = "../dkod-worktree" }
dkod-mcp = { path = "../dkod-mcp" }
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# `rmcp` will be re-added in M3-3 when `dkod --mcp` starts using it.
# Keeping this PR's dependency footprint to what `status`/`abort` need
# avoids pulling rmcp + tokio-mcp into the build for no reason.

[dev-dependencies]
tempfile.workspace = true
