[package]
name = "dkod-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Symbol extraction and call-graph partitioning for dkod-swarm"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
