[package]
name = "dkod-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Planner, AST symbol replacement, and commit finalization for dkod-swarm"

[dependencies]
dkod-worktree = { path = "../dkod-worktree" }
dk-core.workspace = true
dk-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
anyhow.workspace = true
