[package]
name = "auth-sandbox"
version = "0.0.0"
edition = "2024"
license = "MIT"
publish = false

# This crate is a fixture — read by dkod-swarm's e2e tests, NEVER built
# by the dkod-swarm workspace. It is therefore not listed in the
# workspace `members`. If a contributor wants to build it standalone:
#   cd bench/sandboxes/auth && cargo build
#
# The empty [workspace] table below makes Cargo treat this crate as the
# root of its own (one-crate) workspace, so a standalone `cargo build`
# does not try to join the parent dkod-swarm workspace.
[workspace]
